added main component to it

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <div>
   <div><app-nav-bar></app-nav-bar></div>
-  
+   <div><app-main></app-main></div> 
     <div class="mt-5"><app-accordion></app-accordion></div>
     <div><app-mentor></app-mentor></div>
     <div><app-plan></app-plan></div>
